Correct year alignment

--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ button {
   text-decoration: none;
   display: inline-block;
   font-size: 14px;
-  border-radius: 10px;
+  border-radius: 6px;
   cursor: pointer;
   margin-top: 20px;
 }
@@ -229,11 +229,12 @@ p.desc {
   text-align: right;
   transition: all 0.5s ease-in-out;
   font-size: 3.5rem;
+  margin: 28px 0px;
 }
 
 .timeline-item--active .year h3 {
   font-size: 4.5rem;
-  margin: 12px 0px;
+  margin: 15px 0px;
 }
 
 .year div{
